--- a/Exercicios - Site de Reservas S08/formulario.html
+++ b/Exercicios - Site de Reservas S08/formulario.html
@@ -13,38 +13,30 @@
 
     <form id="formulario-reserva" class="formulario">
 
-        <h1><strong>Faça seu cadastro</strong></h1>
+        <h1><strong>Faça sua Reserva</strong></h1>
 
         <div class="input-area">
-            <label for="campo-numero-quarto">Número de quartos</label>
+            <label for="campo-numero-quarto">Número do quarto</label>
             <select id="campo-numero-quarto">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
+                <option value="101">101</option>
+                <option value="102">102</option>
+                <option value="103">103</option>
+                <option value="104">104</option>
             </select>
             <span id="error-numero-quarto" class="texto-erro" hidden></span>
-        </div>
 
-        <div class="input-area">
             <label for="campo-nome">Nome completo</label>
             <input id="campo-nome" type="text" placeholder="Nome" />
             <span id="error-nome" class="texto-erro" hidden></span>
-        </div>
 
-        <div class="input-area">
             <label for="campo-CPF">CPF</label>
             <input id="campo-CPF" type="text" placeholder="000.000.000-00" />
             <span id="error-CPF" class="texto-erro" hidden></span>
-        </div>
-
-        <div class="input-area">
+       
             <label for="campo-inicio-reserva">Início da reserva</label>
             <input id="campo-inicio-reserva" type="date" />
             <span id="error-inicio-reserva" class="texto-erro" hidden></span>
-        </div>
 
-        <div class="input-area">
             <label for="campo-termino-reserva">Término da reserva</label>
             <input id="campo-termino-reserva" type="date" />
             <span id="error-termino-reserva" class="texto-erro" hidden></span>
