--- a/Exercicios - Site de Reservas S08/home.html
+++ b/Exercicios - Site de Reservas S08/home.html
@@ -11,14 +11,16 @@
 <body>
     <h1>Gerenciamento de reservas</h1>
     <button class="bt-logout" id="logout" type="button">Logout</button>
+    <button class="bt-cadastrar" id="cadastrar" type="button">Cadastrar Reserva</button>
 
     <table>
         <thead>
             <tr>
                 <th>Nº quarto</th>
-                <th>Cliente</th>
+                <th>Nome completo</th>
                 <th>CPF</th>
-                <th>Período</th>
+                <th>Início da reserva</th>
+                <th>Término da reserva</th>
                 <th>Ações</th>
             </tr>
         </thead>
